Added an Activity for the Store screen
Buying item methods will go here.

--- a/GhostHunter/res/values/strings.xml
+++ b/GhostHunter/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Ghost Hunter</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_store">Store Activity</string>
 
 </resources>
